fix alignment

--- a/videoencoder/styles.css
+++ b/videoencoder/styles.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: auto 0;
+  margin: 0 auto;
   width: 100%;
   max-width: 900px;
   padding: 10px;
